# OntoFlow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  workflow.yml
.github/workflows/: ci.yml  pages.yml
docs/: _config.yml  index.md  setup_ontoflow_v2.md
docs/.github/workflows/: pages.yml
examples/cost_test/: test.py
examples/datamodel_generation/: README.md  formula_generation.py  simple_with_ote.py  test_engine.py
examples/datamodel_generation/entities/: ASEAtoms.json  CalcResults.json
examples/filter_example/: ss3_lite.ttl  test.py
examples/omikb_example/: test.py
examples/openmodel_example/: job_id.txt  mco.json  openmodel.ttl  openmodel_example.ttl  output.json  output.yaml  pareto_front.txt  paths.json  res.json  test.py
examples/ss1_example/: ss1.ttl  test.py
examples/ss3_example/: _data.json  _engine.py  _output.yaml  data.json  output.json  output.yaml  patterns.sparql  patterns_cat.txt  ss3.ttl  ss3_complete.ttl  ss3_v1.ttl  ss3_wkpa.ttl  ss3kb.ttl  test.json  test.py
examples/water_density_usecase/: application.py
mco_strategies/: minimumCostStrategy.py
ontoflow/: .env  _engine.py  engine.py  mco.py  node.py
ontoflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ontoflow/cost_converters/: converters.py
ontoflow/log/: logger.py
ontoflow/mco_strategies/: minimumCostStrategy.py
ontoflow/mcos/: basic.py  mods.py
ontologies/: kpa-converters.ttl
tests/: test_engine.py  test_kpa_costs.py  test_mapping_routes.py  test_search_algorithm.py
tests/utils/: ontology_generator.py
