[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoflow"
version = "0.0.1"
description = "An enhanced workflow designer and builder"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Alessandro Calvio", email = "alessandro.calvio@unibo.it"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]
dependencies = [
  "tripper @ git+https://github.com/EMMC-ASBL/tripper@8b1acbe",
  "DLite-Python<=0.3.16",
  "pint~=0.18"
]

[project.optional-dependencies]
examples = [
  "oteapi-asmod @ git+https://github.com/EMMC-ASBL/oteapi-asmod@eb7292b",
  "pybacktrip @ git+https://github.com/xAlessandroC/PyBackTrip@360ab93",
  "oteapi-core==0.4.1"
]

[project.urls]
repository = "https://github.com/H2020-OpenModel/OntoFlow"