[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoflow"
version = "0.0.1"
description = "An enhanced workflow designer and builder"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Alessandro Calvio", email = "alessandro.calvio@unibo.it"},
  {name = "Michele Brigadoi", email = "michele.brigadoi@unibo.it"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]
dependencies = [
  "pyyaml",
  "python-dotenv",
  "pybacktrip @ git+https://github.com/xAlessandroC/PyBackTrip@v2.0.0",
  "sim-cmcl-mods-wrapper @ git+https://github.com/EMMC-ASBL/MoDSInterface@dev-add-mcdm-algorithm-type",
  "rdflib",
  "pydot",
]

[project.optional-dependencies]
examples = [
  "oteapi-asmod @ git+https://github.com/EMMC-ASBL/oteapi-asmod@eb7292b",
  "oteapi-core==0.4.1"
]

[tool.setuptools]
py-modules = []

[project.urls]
repository = "https://github.com/H2020-OpenModel/OntoFlow"
