[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ontoflow"
version = "2.0.0"
description = "An enhanced workflow designer and builder"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Alessandro Calvio", email = "alessandro.calvio@unibo.it"},
  {name = "Michele Brigadoi", email = "michele.brigadoi@unibo.it"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]
dependencies = [
  "pyyaml",
  "python-dotenv",
  "rdflib",
  "pydot",
  "pybacktrip @ git+https://github.com/EMMC-ASBL/PyBackTrip@v2.0.0",
  "sim-cmcl-mods-wrapper @ git+https://github.com/EMMC-ASBL/MoDSInterface",
]

[project.optional-dependencies]
examples = [
  "oteapi-asmod @ git+https://github.com/EMMC-ASBL/oteapi-asmod@eb7292b",
  "oteapi-core==0.4.1"
]

[project.urls]
repository = "https://github.com/H2020-OpenModel/OntoFlow"

[tool.setuptools.package-data]
ontoflow = ['.env', 'ontologies/*']